
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_7__ {int * pb; TYPE_1__* priv_data; } ;
struct TYPE_6__ {int cur_chunk; int* chunk; int num_recs; int seq_rec; int cur_chunk_pos; int rec_hdrs; scalar_t__ first_chunk; scalar_t__ cur_rec; } ;
typedef TYPE_1__ TYDemuxContext ;
typedef int AVIOContext ;
typedef TYPE_2__ AVFormatContext ;


 int AVERROR (int ) ;
 int AVERROR_EOF ;
 int AVERROR_INVALIDDATA ;
 scalar_t__ AV_RB32 (int*) ;
 int CHUNK_SIZE ;
 int ENOMEM ;
 scalar_t__ TIVO_PES_FILEID ;
 int av_freep (int *) ;
 scalar_t__ avio_feof (int *) ;
 int avio_read (int *,int*,int) ;
 int ff_dlog (TYPE_2__*,char*,int) ;
 int parse_chunk_headers (int*,int) ;
 int parse_master (TYPE_2__*) ;

__attribute__((used)) static int get_chunk(AVFormatContext *s)
{
    TYDemuxContext *ty = s->priv_data;
    AVIOContext *pb = s->pb;
    int read_size, num_recs;

    ff_dlog(s, "parsing ty chunk #%d\n", ty->cur_chunk);


    if (avio_feof(pb))
        return AVERROR_EOF;


    read_size = avio_read(pb, ty->chunk, CHUNK_SIZE);
    ty->cur_chunk++;

    if ((read_size < 4) || (AV_RB32(ty->chunk) == 0)) {
        return AVERROR_EOF;
    }


    if (AV_RB32(ty->chunk) == TIVO_PES_FILEID) {
        parse_master(s);
        return get_chunk(s);
    }


    if (ty->chunk[3] & 0x80) {

        ty->num_recs = num_recs = (ty->chunk[1] << 8) + ty->chunk[0];
        ty->seq_rec = (ty->chunk[3] << 8) + ty->chunk[2];
        if (ty->seq_rec != 0xffff) {
            ty->seq_rec &= ~0x8000;
        }
    } else {

        ty->num_recs = num_recs = ty->chunk[0];
        ty->seq_rec = ty->chunk[1];
    }
    ty->cur_rec = 0;
    ty->first_chunk = 0;

    ff_dlog(s, "chunk has %d records\n", num_recs);
    ty->cur_chunk_pos = 4;

    av_freep(&ty->rec_hdrs);

    if (num_recs * 16 >= CHUNK_SIZE - 4)
        return AVERROR_INVALIDDATA;

    ty->rec_hdrs = parse_chunk_headers(ty->chunk + 4, num_recs);
    if (!ty->rec_hdrs)
        return AVERROR(ENOMEM);
    ty->cur_chunk_pos += 16 * num_recs;

    return 0;
}
